--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -1,5 +1,7 @@
 ﻿{
-  "Database": {
-    "ConnectionString": "Data Source={0};User ID={1};Password={2};Initial Catalog=accountgo;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information"
+    }
   }
 }
