--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Database": {
+    "ConnectionString": "Data Source={0};User ID={1};Password={2};Initial Catalog={3};"
   }
 }
