--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,14 +22,15 @@ services:
             - ASPNETCORE_ENVIRONMENT=Production
             - ASPNETCORE_URLS=http://+:8001
             - DBSERVER=localhost
-            - DBUSERID=sa
+            - DBUSERID=dbuser
             - DBPASSWORD=Str0ngPassword
-        depends_on:
-            - db
-    db:
-        image: microsoft/mssql-server-linux
-        ports:
-            - "1433:1433"
-        environment:
-            SA_PASSWORD: "Str0ngPassword"
-            ACCEPT_EULA: "Y"
+            - DBNAME=accountgodb
+    #     depends_on:
+    #         - db
+    # db:
+    #     image: microsoft/mssql-server-linux
+    #     ports:
+    #         - "1433:1433"
+    #     environment:
+    #         SA_PASSWORD: "Str0ngPassword"
+    #         ACCEPT_EULA: "Y"
