update nuget packages

--- a/test/Module.Tests/SampleModulesRefs.targets
+++ b/test/Module.Tests/SampleModulesRefs.targets
@@ -3,14 +3,14 @@
     <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
   </PropertyGroup> -->
 
-  <ItemGroup>
+<!--  <ItemGroup>
     <Content Include="modules.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
+  </ItemGroup>-->
 
-  <ItemGroup>
+<!--  <ItemGroup>
     <ProjectReference Include="../SampleModules/SampleNetStandard20/SampleNetStandard20.csproj" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
