small updates on packages

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
   "Database": {
-    "ConnectionString": "Data Source={0};User ID={1};Password={2};Initial Catalog={3};"
+    "ConnectionString": "Data Source={0};User ID={1};Password={2};Initial Catalog={3};TrustServerCertificate=yes;"
   }
 }
