update readme documentation (#179)
* add vscode dev container

* small updates on packages

* update documentation

--- a/.gitignore
+++ b/.gitignore
@@ -215,5 +215,6 @@ FakesAssemblies/
 /src/Api/Plugins/*
 /src/AccountGoWeb/Modules/*
 /src/AccountGoWeb/Plugins/*
+/src/Api/Data/Migrations
 
 .vscode
